# archae

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILDING.md  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: cli.md  conf.py  index.md  library.md  options.md  requirements.txt  warnings.md
src/archae/: __init__.py  __main__.py  cli.py  config.py  default_settings.toml  extractor.py  options.yaml
src/archae/util/: __init__.py  file_tracker.py  lists.py  tool_manager.py
src/archae/util/archiver/: __init__.py  base_archiver.py  peazip.py  seven_zip.py  unar.py
src/archae/util/converter/: file_size.py
src/archae/util/enum/: __init__.py  byte_scale.py  warning_types.py
tests/: __init__.py  test_cli.py  test_module.py  test_module_password.py  utils.py
